# skillos

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs-preview.yml  docs.yml  publish.yml  update-docs.yml
docs/: getting-started.md  index.md
docs/api/: skillos-core.md  skillos-strands.md
getting-started/: index.html
search/: search_index.json
site/: 404.html  index.html
site/api/skillos-core/: index.html
src/skillos_strands/: repo.py
tests/: test_repo.py
